<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="24dp"
    android:scrollbars="none"
    tools:context=".Income">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/incomePg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/income"
            android:textColor="@color/Green"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:id="@+id/noteIncome"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="60dp"
            android:hint="@string/note"
            android:background="@drawable/background_click"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textCapSentences"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/black"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/amountIncome"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:hint="@string/amount"
            android:background="@drawable/background_click"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textAlignment="gravity"
            android:textColor="@color/black"
            android:textSize="18sp"/>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:animationCache="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonEnter"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/enter"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:cornerRadius="8sp"/>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:visibility="invisible"/>

        </FrameLayout>
    </LinearLayout>

</ScrollView>