<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="24dp"
    android:scrollbars="none"
<<<<<<< HEAD
    tools:context=".Outcome">
=======
    tools:context=".Expense">
>>>>>>> 05a893865e156dc3b8a6615755e6c60f1ccfc6fa

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/expenses"
            android:textColor="@color/Red"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal" />

        <EditText
<<<<<<< HEAD
            android:id="@+id/noteOutcome"
=======
            android:id="@+id/note"
>>>>>>> 05a893865e156dc3b8a6615755e6c60f1ccfc6fa
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="60dp"
            android:hint="@string/note_e"
<<<<<<< HEAD
            android:background="@drawable/background_input"
=======
            android:background="@drawable/background_click"
>>>>>>> 05a893865e156dc3b8a6615755e6c60f1ccfc6fa
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textCapSentences"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/black"
            android:textSize="18sp"/>

        <EditText
<<<<<<< HEAD
            android:id="@+id/amountOutcome"
=======
            android:id="@+id/amount"
>>>>>>> 05a893865e156dc3b8a6615755e6c60f1ccfc6fa
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:hint="@string/amount_e"
            android:background="@drawable/background_click"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textAlignment="gravity"
            android:textColor="@color/black"
            android:textSize="18sp"/>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:animationCache="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonEnter"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/enter_e"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:cornerRadius="8sp"/>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:visibility="invisible"/>
        </FrameLayout>

    </LinearLayout>
</ScrollView>