<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Finance"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Finance">

    <LinearLayout
        android:id="@id/layoutHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:background="@color/BackGround"
        android:orientation="horizontal"
        android:padding="15dp"
        app:layout_constraintTop_toTopOf="parent"
        >
        <ImageView
            android:id="@+id/backbtn"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/icon_back_arrow"
            android:layout_marginTop="5dp"
            app:tint="@color/white" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/financE"
            android:textColor="@color/white"
            android:textSize="26sp"
            android:textStyle="bold"/>
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"/>
    </LinearLayout>

    <TextView
        android:id="@+id/Income"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="16dp"
        android:layout_marginTop="70dp"
        android:hint="@string/note"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="@color/Green"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/Expense"
        />


    <TextView
        android:id="@+id/addInc"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="16dp"
        android:hint="$"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textAlignment="textEnd"
        android:textColor="@color/Green"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/remExp"
        />

    <TextView
        android:id="@+id/Expense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginBottom="64dp"
        android:hint="@string/note"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="@color/Red"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@id/Total"

        />

    <TextView
        android:id="@+id/remExp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="$"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textAlignment="textEnd"
        android:textColor="@color/Red"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/result_display"
        />

    <TextView
        android:id="@+id/Total"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="Total"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textAlignment="viewStart"
        app:layout_constraintBottom_toTopOf="@id/button_layout"
        />
    <TextView
        android:id="@+id/result_display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="0"
        android:layout_margin="16dp"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textAlignment="textEnd"
        app:layout_constraintBottom_toTopOf="@id/button_layout"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/financeRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/result_display"
        app:layout_constraintBottom_toTopOf="@+id/button_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/layoutFooter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:background="@color/BackGround"
        android:orientation="horizontal"
        android:padding="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
    <LinearLayout
        android:id="@+id/button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/ButtonAdding"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="170dp"
                android:layout_height="68dp"
                android:layout_margin="11dp"
                android:backgroundTint="@color/Green"
                android:text="@string/incoMe"
                android:textColor="@color/white"
                android:textSize="25sp"
                app:cornerRadius="36dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonExpense"
                style="@style/ShapeAppearance.Material3.NavigationBarView.ActiveIndicator"
                android:layout_width="170dp"
                android:layout_height="68dp"
                android:layout_margin="11dp"
                android:backgroundTint="@color/Red"
                android:text="@string/expense"
                android:textColor="@color/white"
                android:textSize="25sp"
                app:cornerRadius="36dp"/>

        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>